Feat: additional validation for AlgebraicNotation.java and testing for that